--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,4 @@
 {
-  "name": "Poetry / Conda Docker",
-    "build": {
-        "dockerfile": "Dockerfile",
-    },
+  "name": "Poetry / Conda Environment",
+  "image": "ghcr.io/philippe-neveux/data-sciences:latest"
 }
