--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,3 +1,4 @@
 {
-  "build": { "dockerfile": "Dockerfile" }
+  "name": "Poetry / Conda Environment",
+  "image": "ghcr.io/philippe-neveux/data-sciences:latest"
 }
